overflow fix

--- a/src/app/weather/weather.component.scss
+++ b/src/app/weather/weather.component.scss
@@ -99,7 +99,6 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            height: 100%;
         }
     
         .info-header{
